@@ -7,6 +7,10 @@
 
 RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Joe Zuntz:
+
+    - Fixed a case-sensitivity problem with Fortran modules.
+
   From Bauke Conijn:
 
     - Added Users Guide example for auto-generated source code
